Added method for getting participants of a event